fix(rhc-templates): fixed 404's and too small navbar

--- a/packages/components-css/navbar/index.scss
+++ b/packages/components-css/navbar/index.scss
@@ -7,7 +7,6 @@
   display: flex;
   font-family: var(--rhc-font-family-primary, inherit);
   justify-content: space-between;
-  max-inline-size: var(--rhc-nav-bar-content-max-inline-size);
   row-gap: var(--rhc-nav-bar-content-row-gap);
 }
 
